--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -41,7 +41,8 @@
         }
     }
     @media only screen and (max-width:37.5em) {
-        margin-top: 1.5rem;
+        margin-top: 1.2rem;
+        width: 16.7rem;
      }
 }
 span{
