--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -41,7 +41,7 @@
         }
     }
     @media only screen and (max-width:37.5em) {
-        margin-top: 1.2rem;
+        margin-top: .8rem;
         width: 16.7rem;
      }
 }
