--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
         padding: 1rem; }
   @media only screen and (max-width: 37.5em) {
     .profile-box {
-      margin-top: 1.2rem;
+      margin-top: .8rem;
       width: 16.7rem; } }
 
 span {
