--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,7 +3,7 @@
     height: 17.4rem;
     box-shadow:1px 1px 8px 4px #c0c0c0;
     position: absolute;
-    top: 15%;
+    top: 13%;
     right: 4%;
     // margin: 2rem auto;
     border-radius: 1.2rem;
@@ -41,8 +41,9 @@
         }
     }
     @media only screen and (max-width:37.5em) {
-        margin-top: .2rem;
-        width: 16.7rem;
+        width: 17.7rem;
+        top: 20%;
+        right: 2%;
      }
 }
 span{
