--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,15 @@ body {
         background-color: #F2F2F2;
         border-radius: .8rem;
         padding: 1rem; }
+  @media only screen and (max-width: 37.5em) {
+    .profile-box {
+      width: 17.7rem;
+      top: 10%;
+      right: 2%; } }
   @media only screen and (max-width: 75em) {
     .profile-box {
       width: 17.7rem;
-      top: 8%;
+      top: 12%;
       right: 2%; } }
 
 span {
